# CPP_Practice

./: CMakeLists.txt  clases.cpp  herencia.cpp  pointers.cpp
C/multithreading/: CMakeLists.txt
C/multithreading/src/: main.c
avanced_practicle/: CMakeLists.txt
avanced_practicle/app/: CMakeLists.txt
avanced_practicle/app/src/: main.cpp
avanced_practicle/devices/: CMakeLists.txt
avanced_practicle/devices/include/: Buzzer.h  Device.h  DevicesException.h  LED.h
avanced_practicle/devices/src/: Buzzer.cpp  DevicesException.cpp  LED.cpp
avanced_practicle/sensors/: CMakeLists.txt
avanced_practicle/sensors/include/: Sensor.h  SensorTempException.h
avanced_practicle/sensors/src/: Sensor.cpp  SensorTempException.cpp
camera_capture/: CMakeLists.txt  Readme.md
camera_capture/src/: buffer.cpp  buffer.h  camera.cpp  camera.h  main.cpp
sockets_practicle/tcp_internet_socket/: CMakeLists.txt
sockets_practicle/tcp_internet_socket/app/: CMakeLists.txt  main_client.cpp  main_server.cpp
sockets_practicle/tcp_internet_socket/client/: CMakeLists.txt
sockets_practicle/tcp_internet_socket/client/include/: client.h
sockets_practicle/tcp_internet_socket/client/src/: client.cpp
sockets_practicle/tcp_internet_socket/server/: CMakeLists.txt
sockets_practicle/tcp_internet_socket/server/include/: server.h
sockets_practicle/tcp_internet_socket/server/src/: server.cpp
